hphp/test/zend/good/ext/xmlreader/tests/008.php.skipif
<?php if (!extension_loaded("xmlreader")) print "skip"; ?>