hphp/test/zend/bad/ext/zip/tests/bug38944.php.skipif
<?php if (!extension_loaded("zip")) print "skip"; ?>